--- a/CollectionViewV1/Base.lproj/Main.storyboard
+++ b/CollectionViewV1/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,138 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CollectionViewV1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JRb-H1-YKK">
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="G5I-ob-Fzo">
+                                    <size key="itemSize" width="100" height="120"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="16" minY="16" maxX="16" maxY="16"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionViewCell" id="qnJ-s8-l77" customClass="CustomCollectionViewCell" customModule="CollectionViewV1" customModuleProvider="target">
+                                        <rect key="frame" x="16" y="16" width="100" height="120"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="120"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ucq-RO-Shd">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    <color key="backgroundColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1W-z4-9hz">
+                                                    <rect key="frame" x="0.0" y="99.5" width="100" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="C1W-z4-9hz" firstAttribute="leading" secondItem="qnJ-s8-l77" secondAttribute="leading" id="6DN-oR-nmj"/>
+                                            <constraint firstItem="Ucq-RO-Shd" firstAttribute="top" secondItem="qnJ-s8-l77" secondAttribute="top" id="JzN-no-buj"/>
+                                            <constraint firstAttribute="trailing" secondItem="C1W-z4-9hz" secondAttribute="trailing" id="bhs-js-h9t"/>
+                                            <constraint firstItem="C1W-z4-9hz" firstAttribute="top" secondItem="qnJ-s8-l77" secondAttribute="top" constant="100" id="eRn-2a-Iig"/>
+                                            <constraint firstAttribute="trailing" secondItem="Ucq-RO-Shd" secondAttribute="trailing" id="hQY-Cd-LTF"/>
+                                            <constraint firstAttribute="bottom" secondItem="C1W-z4-9hz" secondAttribute="bottom" id="jPf-xi-HLz"/>
+                                            <constraint firstItem="Ucq-RO-Shd" firstAttribute="leading" secondItem="qnJ-s8-l77" secondAttribute="leading" id="nFe-CP-Muj"/>
+                                            <constraint firstAttribute="bottom" secondItem="Ucq-RO-Shd" secondAttribute="bottom" constant="20" id="wq0-ya-Cib"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="appLabel" destination="C1W-z4-9hz" id="6Gs-iq-cDq"/>
+                                            <outlet property="customCollectionImage" destination="Ucq-RO-Shd" id="NCR-US-fIx"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="lMQ-Zk-1qH"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="u4q-Rw-D2E"/>
+                                </connections>
+                            </collectionView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WSO-W3-mvg">
+                                <rect key="frame" x="0.0" y="20" width="325" height="50"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="q2i-ki-GG2"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ndq-D6-Toi">
+                                <rect key="frame" x="329" y="20" width="46" height="50"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="ValueChanged:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UXM-KD-BHN"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WSO-W3-mvg" secondAttribute="trailing" constant="50" id="2C1-BQ-bUc"/>
+                            <constraint firstItem="Ndq-D6-Toi" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="51a-aK-FR2"/>
+                            <constraint firstItem="Ndq-D6-Toi" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="7KE-T5-eTD"/>
+                            <constraint firstItem="Ndq-D6-Toi" firstAttribute="leading" secondItem="WSO-W3-mvg" secondAttribute="trailing" constant="4" id="7Lh-DI-r2s"/>
+                            <constraint firstItem="WSO-W3-mvg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="CEi-S4-9Wd"/>
+                            <constraint firstItem="JRb-H1-YKK" firstAttribute="top" secondItem="WSO-W3-mvg" secondAttribute="bottom" id="LqL-qR-iYd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="JRb-H1-YKK" secondAttribute="bottom" id="NKV-i1-zdg"/>
+                            <constraint firstItem="JRb-H1-YKK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bSV-lD-9HT"/>
+                            <constraint firstItem="JRb-H1-YKK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="bkT-xl-uiF"/>
+                            <constraint firstAttribute="trailing" secondItem="JRb-H1-YKK" secondAttribute="trailing" id="gny-56-jM9"/>
+                            <constraint firstItem="JRb-H1-YKK" firstAttribute="top" secondItem="Ndq-D6-Toi" secondAttribute="bottom" id="z8r-fI-us4"/>
+                            <constraint firstItem="WSO-W3-mvg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zda-1L-2Te"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="myCollectionView" destination="JRb-H1-YKK" id="kVN-jQ-LtT"/>
+                        <outlet property="valueTextField" destination="WSO-W3-mvg" id="DiB-Lz-BZw"/>
+                        <segue destination="3Bl-0A-gNS" kind="show" identifier="showDetail" id="wVK-Ti-mnK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="44" y="33.733133433283363"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="m39-aw-bUp">
+            <objects>
+                <viewController id="3Bl-0A-gNS" customClass="DetailViewController" customModule="CollectionViewV1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6st-dx-dgY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4W2-Nd-tvD">
+                                <rect key="frame" x="0.0" y="120" width="375" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4W2-Nd-tvD" firstAttribute="top" secondItem="QD7-nd-jry" secondAttribute="top" constant="100" id="Igk-M0-4lw"/>
+                            <constraint firstItem="4W2-Nd-tvD" firstAttribute="leading" secondItem="QD7-nd-jry" secondAttribute="leading" id="Wk9-5d-3io"/>
+                            <constraint firstItem="QD7-nd-jry" firstAttribute="trailing" secondItem="4W2-Nd-tvD" secondAttribute="trailing" id="Zlc-Te-76Y"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="QD7-nd-jry"/>
+                    </view>
+                    <connections>
+                        <outlet property="detailVCLabel" destination="4W2-Nd-tvD" id="W6L-sf-M9r"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hKd-Es-dt3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="836" y="26"/>
         </scene>
     </scenes>
 </document>
